initialized npm and added nav.scss

--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -1,2 +1,10 @@
+//COLORS
+$_primary__color: red;
+$_primary__color_dark: #C10000;
+
+//FONT
 $_base__font: 'Montserrat', sans-serif;
-$_title_font: 'Bitter', serif;
+$_title__font: 'Bitter', serif;
+
+//SPACING
+$_base_spacing: 30px;
