--- a/sass/app.scss
+++ b/sass/app.scss
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Bitter:700|Montserrat');
 @import 'variables';
-@import 'base';
 @import 'typography';
+@import 'base';
+@import 'nav';
 @import 'layout';
 @import 'responsive';
