added gulp to compile sass  and menu system to the new theme

--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -1,10 +1,11 @@
 //COLORS
-$_primary__color: red;
-$_primary__color_dark: #C10000;
+$primary_color: #ed1c24;
+$primary__color_dark: #C10000;
+$white: #FFF;
 
 //FONT
-$_base__font: 'Montserrat', sans-serif;
-$_title__font: 'Bitter', serif;
+$base__font: 'Montserrat', sans-serif;
+$title__font: 'Bitter', serif;
 
 //SPACING
-$_base_spacing: 30px;
+$base_spacing: 30px;
