--- a/sass/_typography.scss
+++ b/sass/_typography.scss
@@ -1,3 +1,6 @@
+body{
+    font-family: $base__font;
+}
 h1, h2, h3, h4, h5, h6{
-    font-family: $_title__font;
+    font-family: $title__font;
 }
