--- a/sass/app.scss
+++ b/sass/app.scss
@@ -1,7 +1,9 @@
-@import url('https://fonts.googleapis.com/css?family=Bitter:700|Montserrat');
 @import 'variables';
 @import 'typography';
 @import 'base';
 @import 'nav';
 @import 'layout';
 @import 'responsive';
+ body{
+     font-family: $base__font;
+ }
