--- a/sass/app.scss
+++ b/sass/app.scss
@@ -1,9 +1,7 @@
 @import 'variables';
 @import 'typography';
+@import 'node_modules/jeet/scss/index';
 @import 'base';
 @import 'nav';
 @import 'layout';
 @import 'responsive';
- body{
-     font-family: $base__font;
- }
