header style and main nav

--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -15,6 +15,7 @@
     height: 70px;
     background-color: #000;
     color: $white;
+    width: 100%;
     .header__logo{
         @include column(2/12);
     }
