--- a/sass/_nav.scss
+++ b/sass/_nav.scss
@@ -1,6 +1,6 @@
 //NAV STYLES
 .header__nav{
-    @include column(6/12);
+    @include column(9.5/16);
     display: table;
     height: 70px;
     .menu-main-container{
@@ -13,6 +13,7 @@
         height: 100%;
         .menu-item{
             list-style: none;
+            padding-left: 20px;
             display: table-cell;
             vertical-align: middle;
             height: 100%;
@@ -20,11 +21,15 @@
                 padding: 25px 10px;
                 text-decoration: none;
                 color: $white;
+                text-transform: lowercase;
+                letter-spacing: 2px;
+                font-weight: 300;
+                font-size: 1em;
             }
         }
     }
 }
 //social media nav
 .header__social_nav{
-    @include column(2/12);
+    @include column(3/16);
 }
