--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -1,5 +1,5 @@
 .container{
-    @include center(100%);
+    @include center(82%);
     padding-left: 20px;
     padding-right: 20px;
 }
@@ -11,12 +11,26 @@
 
 //HEADER STYLES
 .header{
-    @extend .container;
     height: 70px;
     background-color: #000;
     color: $white;
     width: 100%;
     .header__logo{
-        @include column(2/12);
+        @include column(3.5/16);
+        img{
+            vertical-align: middle;
+            padding: 5px 0px;
+        }
     }
+}
+
+///MAIN CONTENT
+#main{
+    padding-top: 40px;
+}
+.article{
+    @include column(8/12);
+}
+aside{
+    @include column(4/12);
 }
