--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -2,6 +2,7 @@
 $primary_color: #ed1c24;
 $primary__color_dark: #C10000;
 $white: #FFF;
+$black: #000;
 
 //FONT
 $base__font: 'Montserrat', sans-serif;
