--- a/sass/app.scss
+++ b/sass/app.scss
@@ -1,4 +1,5 @@
 @import 'variables';
+@import 'scss/bootstrap-grid';
 @import 'typography';
 @import 'node_modules/jeet/scss/index';
 @import 'base';
