--- a/sass/app.scss
+++ b/sass/app.scss
@@ -1,5 +1,5 @@
 @import 'variables';
-@import 'scss/bootstrap-grid';
+@import 'scss/bootstrap';
 @import 'typography';
 @import 'node_modules/jeet/scss/index';
 @import 'base';
