--- a/sass/app.scss
+++ b/sass/app.scss
@@ -1,8 +1,8 @@
 @import 'variables';
-@import 'scss/bootstrap';
 @import 'typography';
 @import 'node_modules/jeet/scss/index';
 @import 'base';
 @import 'nav';
 @import 'layout';
+@import 'slider';
 @import 'responsive';
