--- a/sass/_responsive.scss
+++ b/sass/_responsive.scss
@@ -46,3 +46,16 @@ body:not(.custom-background-image):before, body:not(.custom-background-image):af
         }
     }
 }
+
+
+// .wrapper {
+//   margin: 0 auto;
+//   width: 100%;
+//   @include screen('tablet') {
+//     width: 90%;
+//   }
+
+//   @include screen('desktop') {
+//     width: 85%;
+//   }
+// }
