--- a/sass/app.scss
+++ b/sass/app.scss
@@ -1,6 +1,7 @@
 @import 'variables';
 @import 'typography';
 @import 'node_modules/jeet/scss/index';
+@import 'mixin';
 @import 'base';
 @import 'nav';
 @import 'layout';
