--- a/sass/_mixin.scss
+++ b/sass/_mixin.scss
@@ -23,3 +23,9 @@
     }
   }
 }
+
+@mixin opacity($opacity) {
+  opacity: $opacity;
+  $opacity-ie: $opacity * 100;
+  filter: alpha(opacity = $opacity-ie); //IE8
+}
